kubernetes/apps/observability/victoria-logs/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoria-logs
  namespace: observability
spec:
  hostnames:
    - "victoria-logs.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - matches:
        - path: { type: PathPrefix, value: / }
      backendRefs:
        - name: victoria-logs-server
          port: 9428
