kubernetes/apps/observability/victoria-logs/app/securitypolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: victoria-logs-forward-auth
  namespace: observability
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: victoria-logs
  extAuth:
    failOpen: false
    headersToExtAuth:
      - accept
      - cookie
      - authorization
      - proxy-authorization
      - x-forwarded-proto
    http:
      backendRefs:
        - group: ""
          kind: Service
          name: authelia
          namespace: default
          port: 80
      path: /api/authz/ext-authz/
      headersToBackend:
        - Remote-User
        - Remote-Groups
        - Remote-Name
        - Remote-Email
